[package]
name = "one_shot_click_handlers"
description = "Demonstrates one way to handle ui click handlers"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."bevy"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"

[dependencies]
bevy = "0.13.2"

[target.'cfg(windows)'.dependencies]
blake3 = { version = "1.5.1", features=["pure"] } # https://github.com/bevyengine/bevy/issues/10425

[lints.clippy]
type_complexity = "allow"
